update controller, get zaas details